# FindRecipe

./: .gitignore  docker-compose.yml
MongoDB/: Dockerfile  ingredients_1_30000.csv  recipes.csv  recipes_1_30000.csv  recipes_extractor_v2.2.py  recipes_extractor_v2.py  test_connection.py  weights_1_30000.csv
bot/: .env  Dockerfile  blacklist_del.py  bot_blacklist.py  bot_menu.py  bot_preferences.py  bot_start.py  bot_start_menu.py  config.py  full_connected_bot.py  requirements.txt  test.json
db_creator/: Dockerfile  ingredients.csv  recipes.csv  weights.csv
fastapi/: Dockerfile  main.py  order_of_products.txt  pyproject.toml  requirements.txt  test_connection_to_mongo.py
