[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Egor Lebedev <e.lebedev@innopolis.university>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
